--- a/packages/gobang-packages/gobang-app/tsconfig.json
+++ b/packages/gobang-packages/gobang-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./../../tsconfig.dom.base.json",
+  "extends": "./../../../tsconfig.dom.base.json",
   "include": ["./src"],
   "compilerOptions": {
     "jsx": "preserve"
